objects/Assignment_of_Copyrights_and_Patents__c.object
<CustomObject><fields>
        <fullName>Author_s__c</fullName>
        <description>Records the author(s) of copyrights and/or patent applications assigned to Helix under the Consulting Agreement - Technical.</description>
        <inlineHelpText>Records the author(s) of copyrights and/or patent applications assigned to Helix under the Consulting Agreement - Technical.</inlineHelpText>
        <label>Author(s)</label>
        <type>TextArea</type>
    </fields><fields>
        <fullName>Copyright_Patent_Assignment__c</fullName>
        <label>Copyright/Patent Assignment</label>
        <referenceTo>Apttus__APTS_Agreement__c</referenceTo>
        <relationshipLabel>Assignment of Copyrights and Patents</relationshipLabel>
        <relationshipName>Assignment_of_Copyrights_and_Patents</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields><fields>
        <fullName>I_D_Application_Number__c</fullName>
        <description>Records the I.D. or patent application numbers of copyrights and/or patent applications assigned to Helix under the Consulting Agreement - Technical.</description>
        <inlineHelpText>Records the I.D. or patent application numbers of copyrights and/or patent applications assigned to Helix under the Consulting Agreement - Technical.</inlineHelpText>
        <label>I.D./Application Number</label>
        <type>TextArea</type>
    </fields><fields>
        <fullName>Title__c</fullName>
        <description>Records the title of copyrights and/or patent applications assigned to Helix under the Consulting Agreement - Technical.</description>
        <inlineHelpText>Records the title of copyrights and/or patent applications assigned to Helix under the Consulting Agreement - Technical.</inlineHelpText>
        <label>Title</label>
        <type>TextArea</type>
    </fields><allowInChatterGroups>false</allowInChatterGroups><compactLayoutAssignment>SYSTEM</compactLayoutAssignment><deploymentStatus>Deployed</deploymentStatus><description>Related list to capture copyright and/or patent assignments that a consultant delivers to Helix under the Consulting Agreement - Technical.</description><enableActivities>false</enableActivities><enableBulkApi>true</enableBulkApi><enableFeeds>false</enableFeeds><enableHistory>false</enableHistory><enableReports>true</enableReports><enableSearch>true</enableSearch><enableSharing>true</enableSharing><enableStreamingApi>true</enableStreamingApi><label>Assignment of Copyrights and Patents</label><nameField>
        <label>Assignment of Copyrights and Patents Nam</label>
        <type>Text</type>
    </nameField><pluralLabel>Assignment of Copyrights and Patents</pluralLabel><sharingModel>ControlledByParent</sharingModel><visibility>Public</visibility></CustomObject>